fix: prevent project images from squishing on small screens

--- a/src/styles/components/FeaturedProject.module.scss
+++ b/src/styles/components/FeaturedProject.module.scss
@@ -76,6 +76,7 @@ $stacking-breakpoint: lg;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
     border-radius: $border-radius;
     position: relative;
+    height: auto;
   }
 }
 
